--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>40 years exile</title>
+    <title>L'esilio Dimenticato</title>
     <meta name="Title" content="L'esilio Dimenticato" />
     <meta name="og:title" content="L'esilio Dimenticato" />
     <meta name="description" content=" Una crisi dimenticata, un conflitto sul punto di riesplodere, il 2015 per la popolazione Saharawi e il Sahara Occidentale può essere un anno cruciale" />
