--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@ Ma dal 1991, l’anno del cessate il fuoco voluto dalle Nazioni Unite per poter 
                 <ul class="example-orbit" data-orbit>
                     <li>
                         <img src="img/gallery_01/01.jpg" alt="slide 1" />
-                        <div class="orbit-caption">Alcune donne in un improvvisato mercato nel campo profughi di Smara.</div>
+                        <div class="orbit-caption">Alcune donne in un improvvisato mercato nel campo profughi di Smara</div>
                     </li>
                     <li class="active">
                         <img src="img/gallery_01/02.jpg" alt="slide 2" />
-                        <div class="orbit-caption">Cadetti dell'Esercito Popolare di Liberazione Saharawi durante l'inagurazione di una nuova scuola militare.</div>
+                        <div class="orbit-caption">Cadetti dell'Esercito Popolare di Liberazione Saharawi durante l'inagurazione di una nuova scuola militare</div>
                     </li>
                     <li>
                         <img src="img/gallery_01/03.jpg" alt="slide 3" />
@@ -326,8 +326,8 @@ L’insofferenza e l’impazienza le si respira girando tra i campi profughi. Le
         <div class="medium-9 medium-centered columns">
 
             <video id="my_video_1" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_02.jpg">
-                <source src="video/vid-01-campi.mp4" type='video/mp4'>
-                    <source src="video/vid-01-campi.webm" type='video/webm'>
+                <source src="video/ministro.mp4" type='video/mp4'>
+                    <source src="video/ministro.webm" type='video/webm'>
 
 
             </video>
@@ -469,10 +469,11 @@ Secondo alcune stime il numero delle mine antiuomo e anticarro presenti nei pres
         <br />
         <br />
         <br />
+<!--        VIDEO----------------------------------------------------------------->
         <div class="medium-9 medium-centered columns">
             <video id="my_video_3" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_03.jpg">
-                <source src="video/vid-04-ghetto.mp4" type='video/mp4'>
-                    <source src="video/vid-04-ghetto.webm" type='video/webm'>
+                <source src="video/mine.mp4" type='video/mp4'>
+                    <source src="video/mine.webm" type='video/webm'>
 
             </video>
         </div>
@@ -505,8 +506,8 @@ Secondo alcune stime il numero delle mine antiuomo e anticarro presenti nei pres
         <div class="medium-9 medium-centered columns">
 
             <video id="my_video_2" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_01.jpg">
-                <source src="video/vid-02-mercato.mp4" type='video/mp4'>
-                    <source src="video/vid-02-mercato.webm" type='video/webm'>
+                <source src="video/attivista.mp4" type='video/mp4'>
+                    <source src="video/attivista.webm" type='video/webm'>
 
 
             </video>
@@ -560,8 +561,8 @@ Secondo alcune stime il numero delle mine antiuomo e anticarro presenti nei pres
     <div class="row">
         <div class="medium-9 medium-centered columns">
             <video id="my_video_4" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_04.jpg">
-                <source src="video/vid-04-ghetto.mp4" type='video/mp4'>
-                    <source src="video/vid-04-ghetto.webm" type='video/webm'>
+                <source src="video/violenza.mp4" type='video/mp4'>
+                    <source src="video/violenza.webm" type='video/webm'>
             </video>
             <br />
             <br />
