--- a/index_en.html
+++ b/index_en.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>L'esilio Dimenticato</title>
+    <title>Forty years in exile</title>
     <meta name="Title" content="L'esilio Dimenticato" />
     <meta name="og:title" content="L'esilio Dimenticato" />
     <meta name="description" content=" A forgotten crisis, a conflict about to break out again, 2015 for the Saharawi people and Western Sahara can be a crucial year" />
@@ -215,7 +215,7 @@ Bechir’s children were born in the camps to which his generation was forced to
     </div>
     <div class="row">
         <div class="medium-8 medium-centered columns introduction wp2">
-            Here, among goats forced to eat plastic because they have nothing else available, an unemployment rate that grows from year to year, the Saharawi population, made up of about 170 ,000 people, is still forced to live without a future, without prospects.
+            Here, among goats forced to eat plastic because they have nothing else available, an unemployment rate that grows from year to year, the Saharawi population, made up of about 170,000 people, is still forced to live without a future, without prospects.
         </div>
     </div>
     <div class="row">
