--- a/index_en.html
+++ b/index_en.html
@@ -429,7 +429,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
     </div>
     <div class="row">
         <div class="medium-8 medium-centered columns">
-            <h4>I Muri</h4>
+            <h4>The Walls</h4>
             <hr>
             <br />
             <br />
@@ -490,7 +490,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
         <div class="medium-8 medium-centered columns">
             <br />
 
-            <h4>Le Mine Antiuomo</h4>
+            <h4>The Landmines</h4>
             <hr>
             <br />
             <br />
