--- a/index_en.html
+++ b/index_en.html
@@ -189,7 +189,7 @@
         </div>
     </div>
     <div class="header punto1">
-        <img src="img/pic_01.jpg">
+        <img src="img/pic_01_en.jpg">
     </div>
     <div class="row" id="first-chapter">
         <br />
@@ -332,7 +332,7 @@ You can breathe  the impatience going around among the refugee camps. You can br
         <br />
     </div>
     <div class="header">
-        <img src="img/break_02.jpg">
+        <img src="img/break_02_en.jpg">
     </div>
     <div class="row">
         <br />
@@ -357,7 +357,7 @@ You can breathe  the impatience going around among the refugee camps. You can br
     <div class="row">
         <div class="medium-9 medium-centered columns">
 
-            <video id="my_video_1" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_02.jpg">
+            <video id="my_video_1" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_02_en.jpg">
                 <source src="video/ministro.mp4" type='video/mp4'>
                     <source src="video/ministro.webm" type='video/webm'>
 
@@ -513,7 +513,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
         <br />
         <!--        VIDEO----------------------------------------------------------------->
         <div class="medium-9 medium-centered columns">
-            <video id="my_video_3" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_03.jpg">
+            <video id="my_video_3" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_03_en.jpg">
                 <source src="video/mine.mp4" type='video/mp4'>
                     <source src="video/mine.webm" type='video/webm'>
 
@@ -547,7 +547,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
     <div class="row">
         <div class="medium-9 medium-centered columns">
 
-            <video id="my_video_2" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_01.jpg">
+            <video id="my_video_2" class="video-js vjs-default-skin" controls preload="none" data-setup='{}' poster="img/poster_vid_01_en.jpg">
                 <source src="video/attivista.mp4" type='video/mp4'>
                     <source src="video/attivista.webm" type='video/webm'>
 
@@ -602,7 +602,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
 
     <div class="row">
         <div class="medium-9 medium-centered columns">
-            <video id="my_video_4" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_04.jpg">
+            <video id="my_video_4" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_04_en.jpg">
                 <source src="video/violenza.mp4" type='video/mp4'>
                     <source src="video/violenza.webm" type='video/webm'>
             </video>
@@ -617,7 +617,7 @@ By s ome estimates the number of land mines and anti-tank devices placed near th
 
     <div class="header">
 
-        <img src="img/break_03.jpg">
+        <img src="img/break_03_en.jpg">
 
 
 
