--- a/index_en.html
+++ b/index_en.html
@@ -13,8 +13,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forty years in exile</title>
-    <meta name="Title" content="L'esilio Dimenticato" />
-    <meta name="og:title" content="L'esilio Dimenticato" />
+    <meta name="Title" content="Forty years in exile" />
+    <meta name="og:title" content="Forty years in exile" />
     <meta name="description" content=" A forgotten crisis, a conflict about to break out again, 2015 for the Saharawi people and Western Sahara can be a crucial year" />
     <meta name="og:description" content=" A forgotten crisis, a conflict about to break out again, 2015 for the Saharawi people and Western Sahara can be a crucial year" />
     <meta name="og:image" content="" />
