--- a/index_en.html
+++ b/index_en.html
@@ -543,7 +543,7 @@ Dreaming a Nation
         <!--        VIDEO----------------------------------------------------------------->
         <div class="medium-9 medium-centered columns">
             <video id="my_video_3" class="video-js vjs-default-skin" controls preload="none" data-setup='{ "asdf": true }' poster="img/poster_vid_03_en.jpg">
-                <source src="video/en/attivista_en.mp4" type='video/mp4'>
+                <source src="video/en/mine_en.mp4" type='video/mp4'>
                     <source src="video/en/mine_en.webmsd.webm" type='video/webm'>
 
             </video>
